feat: ability to edit documents json attachments
Refs: #71
